# traffic-detect

./: .gitignore  CMakeLists.txt  README.md  README.txt  getvids.sh  videolinks.txt
data/: getvids.sh
src/: main.cpp  process.cpp  process.hpp
